added release info template

--- a/downloads.html
+++ b/downloads.html
@@ -12,6 +12,21 @@
             <div class="innerBody">
                 <div id="downloads">
 		<a href="https://drive.google.com/u/0/uc?export=download&confirm=rizD&id=1_81jRgF45-xOdXDpWcWAl4y0HIzXhtQ0"><p>Alpha 3.1.0</p></a>
+			<h2>Release Log</h2>
+			<p>Alpha 3.1.0
+- Internal performance improvments
+<br>
+- Lots of sounds for battles and whatnot
+<br>
+- Some bugfixes
+<br>
+- Lua API extended to include
+<br>
+- Configurable GLSL Graphics stuff for easier low-end runtime
+<br>
+- Improvments to existing mods_data for some stuff
+<br>
+- Supply chain improved to be less complex</p>
 		<a href="https://drive.google.com/u/0/uc?export=download&confirm=NP7C&id=1Q0Wb20CSgu7tMXKGF62IN5rV8ViNnMj6"><p>Alpha 3.0.2</p></a>
                 <a href="https://drive.google.com/u/0/uc?export=download&confirm=ZqRY&id=1Wj72WKkXf6OA-HOREENGREdQF1SumsoD"><p>Alpha 3.0.1</p></a>
                 <a href="https://drive.google.com/u/0/uc?export=download&confirm=jmwY&id=16_aWxF93teFhBoTqdsjAav9vW4XGF8Rl"><p>Alpha 3.0.0</p></a>
