Updated ALOT Things
updated downloads 
add new tabs
started on mod fourms

--- a/release_logs.html
+++ b/release_logs.html
@@ -33,7 +33,52 @@
 				<li> Performance improvments </li> 
 			</ul>
 			<hr>
-
+				<h3>Alpha 3.0.4</h3>
+			<ul>
+				<li>Engine summary</li>
+				<li>- UI/UX highly improved</li>
+				<li>- Multiplayer stuff added</li>
+				<li>- Internal UnifiedRender changes</li>
+				<li>- Shader recompiler (just a mini-formatter)</li>
+				<li>- Ability to turn on/off SDF map detail</li>
+				<li>- Ability to host games (not tested)</li>
+				<li>- Being able to join games (not tested)</li>
+				<li>- Main menu</li>
+				<li>- AI behaves quite nice over other countries (low aggression, prioritizes alliances); player can <br> command troops and build their army while the AI does the same</li>
+				<li>- AI on wars are somewhat smarter now, they also kind of invade things in a somewhat nice-looking <br> (and good strategically) manner - they're not very good but it's there nonethless</li>
+				<li>Game summary</li>
+				<li>- Taza concession for spain</li>
+				<li>- Germany now won't unify immediately upon launch</li>
+				<li>- More generic events</li>
+				<li>- Reorganization on the events script folder</li>
+			</ul>
+			<hr>
+			<h3>Alpha 3.0.3</h3>
+			<ul>
+				<li>Summary</li>
+				<li>- New Lua API calls</li>
+				<li>- UnifiedRender is now a DLL file</li>
+				<li>- Imrpoved UX and UI</li>
+				<li>- Remove Assimp</li>
+				<li>- Command troops without much hassle :)</li>
+			</ul>
+			<hr>
+			<h3>Alpha 3.0.2</h3>
+			<ul>
+				<li>Summary</li>
+				<li>- Even more aggressive AI</li>
+				<li>- Better heat-map implementation for AI invasions (it will try to defend their own borders and do sane invasions)</li>
+				<li>- Fixes to performance and some other misc stuff</li>
+				<li>- Code reorganization and fixes to the UI</li>
+				<li>- Improved UX experience</li>
+				<li>- War declarations, Relations, Embargoes, etc implemented into the Lua modding API</li>
+				<li>- Remove deprecated mod API calls</li>
+				<li>- Replace the "shotgun" click sound with more subtle ones</li>
+				<li>- Place army, research and other tabs on the right side panel (temporal?)</li>
+			</ul>
+			<hr>
+			
+			
             </div>
         </div>
     </body>
