--- a/downloads.html
+++ b/downloads.html
@@ -18,6 +18,9 @@
 		<br> <br>
 		<h2>alphas 2.9 - 3.0</h2>
 		<hr>
+				<a href="https://drive.google.com/u/0/uc?export=download&confirm=tv8a&id=1r0sFCUSb4oKZ7rTYm9KAxih5FGDovAAe"><p>Alpha 3.0.5</p></a>
+				<a href="https://drive.google.com/u/0/uc?export=download&confirm=tv8a&id=1iAPl-dQ67iaQAoAwSP9OQN4GSNR0uEVG"><p>Alpha 3.0.4</p></a>
+				<a href="https://drive.google.com/u/0/uc?export=download&confirm=H7GW&id=1K9irpv7edCifz-g0dMxR7fRF7w0tgxjp"><p>Alpha 3.0.3</p></a>
 				<a href="https://drive.google.com/u/0/uc?export=download&confirm=NP7C&id=1Q0Wb20CSgu7tMXKGF62IN5rV8ViNnMj6"><p>Alpha 3.0.2</p></a>
                 <a href="https://drive.google.com/u/0/uc?export=download&confirm=ZqRY&id=1Wj72WKkXf6OA-HOREENGREdQF1SumsoD"><p>Alpha 3.0.1</p></a>
                 <a href="https://drive.google.com/u/0/uc?export=download&confirm=jmwY&id=16_aWxF93teFhBoTqdsjAav9vW4XGF8Rl"><p>Alpha 3.0.0</p></a>
