--- a/Contributors.html
+++ b/Contributors.html
@@ -21,7 +21,7 @@
 				<br>
 				<li>Superleaf1995 - Made a considerable part of the underlying game engine, did the initial marketing and did the initial game prototype</li>
 				<br>
-				<li>Kim - 3d Model Artist, Flag Researcher (Discord:The Drip Duck#5647, email: kimaduckstudios@gmail.com , website: <a href="https://www.kimaduckstudio.tk">kimaduckstudios</a> )</li>
+				<li>Kim - 3d Model Artist, Flag Researcher (Discord:Kim_The_WarCrime_Master#5647 email: kimaduckstudios@gmail.com , website: <a href="https://www.kimaduckstudio.tk">kimaduckstudios</a> )</li>
 				<br>
 				<li>Salmmanfred - Wasting time and providing some statistics</li>
 				<br>
