--- a/downloads.html
+++ b/downloads.html
@@ -14,6 +14,7 @@
 		<br> <br>
 		<h2>alphas 3.1 - 4.0</h2>
 		<hr>
+		<a href="https://drive.google.com/u/0/uc?export=download&confirm=rizD&id=1MljsNF_0AAji_SZ9qb3BAoYTG6AQFXq6"><p>Alpha 3.1.1</p></a>
 		<a href="https://drive.google.com/u/0/uc?export=download&confirm=rizD&id=1_81jRgF45-xOdXDpWcWAl4y0HIzXhtQ0"><p>Alpha 3.1.0</p></a>
 		<br> <br>
 		<h2>alphas 2.9 - 3.0</h2>
