--- a/release_logs.html
+++ b/release_logs.html
@@ -11,6 +11,10 @@
             <h1 class="mHeader">Release logs</h1>
             <div class="innerBody">
 			
+			<h3>Alpha 3.1.1</h3>
+				<ul>
+				<li>- Fix bug where the treaty draft window won't get displayed</li>
+				</ul>
 			<h3>Alpha 3.1.0</h3>
 			<ul>
 			  <li>Internal performance improvments</li>
