--- a/release_logs.html
+++ b/release_logs.html
@@ -10,7 +10,32 @@
         <div class="mainBody">
             <h1 class="mHeader">Release logs</h1>
             <div class="innerBody">
-			
+		<h3>Alpha 3.4.0</h3>
+		<h5>Game files</h5>
+		<ul>
+		<li>- German unification event will now not fire at the start of the game</li>
+		<li>- Added "The Holstein-Shweilg question" event (Prusso-Danish war) for german unification</li>
+		<li>- Added socialist, communist and fascist Prussia flags</li>
+		</ul>
+		<h5>Added monarchist flags to a lot of south american countries:</h4>
+		<ul>
+		<li>Uruguay/Cisplatina</li>
+		<li>Cisplatina</li>
+		<li>Peru</li>
+		<li>Gran Colombia</li>
+		<li>Panama</li>
+		<li>etc</li>
+		</ul>
+		<h5>Lua API</h5>
+		<ul>
+		<li>get_nuclei() function for provinces</li>
+		</ul>
+		<h5>Client</h5>
+		<ul>
+<li> Fixed the "drag box on start" glitch<li>
+<li>Descision window will now have a tooltip saying the effects of said descision<li>
+		</ul>
+			<hr>
 			<h3>Alpha 3.1.1</h3>
 				<ul>
 				<li>- Fix bug where the treaty draft window won't get displayed</li>
