fixed 3 extra dots

--- a/release_logs.html
+++ b/release_logs.html
@@ -32,8 +32,8 @@
 		</ul>
 		<h5>Client</h5>
 		<ul>
-<li> Fixed the "drag box on start" glitch<li>
-<li>Descision window will now have a tooltip saying the effects of said descision<li>
+<li> Fixed the "drag box on start" glitch</li>
+<li>Descision window will now have a tooltip saying the effects of said descision</li>
 		</ul>
 			<hr>
 			<h3>Alpha 3.1.1</h3>
