updated alot stuff

--- a/downloads.html
+++ b/downloads.html
@@ -11,14 +11,17 @@
             <h1 class="mHeader">Downloads</h1>
             <div class="innerBody">
                 <div id="downloads">
+
 		<br> <br>
-		<h2>alphas 3.1 - 4.0</h2>
+		<h2>Alphas 3.1 - 4.0</h2>
 		<hr>
+        <a href="https://drive.google.com/u/0/uc?export=download&confirm=rizD&id=13jJti2Z4VDM5tEKxUzE6PegEsAdWSEaR"><p>Alpha 3.4.6</p></a>
+        <a href="https://drive.google.com/u/0/uc?export=download&confirm=rizD&id=1M9RG94ooLyJcgsoKfJBoG6ix1zn1iseA"><p>Alpha 3.4.5</p></a>
 		<a href="https://drive.google.com/u/0/uc?export=download&confirm=rizD&id=1bCO4wFT06w30PiTqDDG4G5da0MupbJma"><p>Alpha 3.4.0</p></a>
 		<a href="https://drive.google.com/u/0/uc?export=download&confirm=rizD&id=1MljsNF_0AAji_SZ9qb3BAoYTG6AQFXq6"><p>Alpha 3.1.1</p></a>
 		<a href="https://drive.google.com/u/0/uc?export=download&confirm=rizD&id=1_81jRgF45-xOdXDpWcWAl4y0HIzXhtQ0"><p>Alpha 3.1.0</p></a>
 		<br> <br>
-		<h2>alphas 2.9 - 3.0</h2>
+		<h2>Alphas 2.9 - 3.0</h2>
 		<hr>
 				<a href="https://drive.google.com/u/0/uc?export=download&confirm=tv8a&id=1r0sFCUSb4oKZ7rTYm9KAxih5FGDovAAe"><p>Alpha 3.0.5</p></a>
 				<a href="https://drive.google.com/u/0/uc?export=download&confirm=tv8a&id=1iAPl-dQ67iaQAoAwSP9OQN4GSNR0uEVG"><p>Alpha 3.0.4</p></a>
