--- a/release_logs.html
+++ b/release_logs.html
@@ -10,6 +10,21 @@
         <div class="mainBody">
             <h1 class="mHeader">Release logs</h1>
             <div class="innerBody">
+
+
+<h3>Alpha 3.4.5</h3>
+<ul></ul>
+<li>I got visual studio back and I built SoE for those who want to see what's the progress so far ;)</li>
+<li></li>
+<li>- this is not not 3.5 ;)</li>
+<li>- Added puppets</li>
+<li>- Bugfixes (of course)</li>
+<li>- Made AI slightly better on diplomatics (it's already good enough on military)</li>
+<li>- Several UI improvments and etcetera</li>
+<li></li>
+<p>note: the game jumps to 2GB ram usage, still requires more optimization</p>
+			</ul>
+		<hr>
 		<h3>Alpha 3.4.0</h3>
 		<h5>Game files</h5>
 		<ul>
